style: Adjust text layout to prevent CJK character overlap in sidebar trigger

--- a/src/components/Sidebar/SidebarTrigger.scss
+++ b/src/components/Sidebar/SidebarTrigger.scss
@@ -7,6 +7,7 @@
 
     width: auto;
     height: var(--lg-button-size);
+    white-space: nowrap;
 
     display: flex;
     align-items: center;
